Fri Dec 17 13:43:13 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (rb_intervm_wormhole_send): support for immediate values.

	* intervm.c (rb_intervm_wormhole_recv): ditto.

Fri Dec 17 13:10:50 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c: New class and its implementation.  Much like a pipe,
	  behaves as a inter-VM communicaition channel.

Fri Dec 17 03:48:49 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (Final_intervm): New function to terminate the
	  inter-VM object space.

	* intervm.c (rb_intervm_str): type fix

	* eval.c (ruby_at_exit): typo fix

	* intervm.c (Init_intervm): I thought it needs lock at first, but
	  now the implementation is totally lock-free.

	* eval.c (ruby_at_exit): this case needs recursion.

Fri Dec 17 02:08:21 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* include/ruby/intern.h (ruby_at_exit): process global finish-ups,
	  just like ruby_vm_at_exit.

	* eval.c (ruby_at_exit): but its implementation is totally
	  different.  This is becaus the process global finishups cannot
	  utilize Ruby's object system (because its lifetime is longer
	  than them).

	* eval.c (ruby_finalize): I believe the old implementation was wrong.

	* main.c (main): need a ruby_finalize() call.

Thu Dec 16 07:56:44 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y (sym_str_new): Uses intervm string.

	* parse.y (rb_id2str): Uses intervm string also; it was a bug to
	  return a cached string itself because that was not dedicated for
	  a current VM.

	* intervm.c (rb_intervm_str): case 1 was missing. Also needed care
	  for embed strings.

Thu Dec 16 07:22:51 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.h: New file.  This is an API to share datum among VMs.

	* intervm.c: Its implementation.

	* inits.c (rb_call_inits): call inits for intervm.c

	* string.c: Strings needs some care about sharing among VMs:
	  Inter-VM strings do not have their own GC so reference counts